--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,20 @@
+body {
+	box-sizing: border-box;
+	width: 100vw;
+	height: 100vh;
+}
+
+main {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	gap: 25px;
+}
+
+main div {
+	min-width: 30%;
+}
+
 form {
 	display: flex;
 	flex-direction: column;
