--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -1,15 +1,52 @@
+form:not(.personal-form) {
+	border: 1px solid black;
+	border-radius: 5px;
+	padding: 10px;
+	margin: 10px;
+}
+
 .form-header {
 	display: flex;
 	flex-direction: row;
 	gap: 10px;
 	align-items: center;
+	justify-content: space-between;
 }
 
 .form-input-section {
 	display: flex;
 	flex-direction: column;
+	gap: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 label {
 	font-weight: bold;
+	font-size: inherit;
+}
+
+input {
+	font-size: inherit;
+	padding: 5px;
+}
+
+button {
+	padding: 10px;
+	border: 1px solid black;
+	border-radius: 5px;
+}
+
+button:hover {
+	cursor: pointer;
+	opacity: 0.7;
+}
+
+.addNew {
+	margin-top: 10px;
+}
+.delete {
+	border: 1px solid white;
+	background-color: red;
+	color: white;
 }
