--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,18 @@
+* {
+	margin: 0px;
+}
+
 body {
 	box-sizing: border-box;
 	width: 100vw;
 	height: 100vh;
+	margin: 0px;
+	font-family: sans-serif;
+}
+
+header {
+	background-color: black;
+	color: white;
 }
 
 main {
@@ -11,11 +22,22 @@ main {
 	gap: 25px;
 }
 
-main div {
-	min-width: 30%;
+main > div {
+	flex: 1;
 }
 
-form {
+footer {
+	margin-top: auto;
+	background-color: black;
+	color: white;
+}
+
+.section {
+	border: 1px solid black;
+	border-radius: 15px;
+	min-width: 30%;
 	display: flex;
 	flex-direction: column;
+	padding: 10px;
+	margin: 15px;
 }
