--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -48,3 +48,10 @@ footer {
 	padding: 10px;
 	margin: 15px;
 }
+
+.controls {
+	margin: 15px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
